# traffic-light

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  _mypy.xml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: cli.py
tests/e2e/: test_traffic_light.py
tests/integration/: test_traffic_light_cli.py
tests/unit/: test_traffic_light.py  test_utils.py
traffic_light/: container.py
traffic_light/adapters/repositories/: in_memory.py  protocols.py
traffic_light/config/: configuration.py
traffic_light/domain/: exceptions.py  models.py
traffic_light/entrypoints/http/: traffic_lights.py
traffic_light/service/: traffic_light.py  traffic_light_cli.py  unit_of_work.py
traffic_light/service/handlers/: traffic_light_handler.py
